--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="main.css">
-  <title>Frontend Mentor | NFT preview card component</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
 
+  <body>
+    <main>
+      <h2>Equilibrium #3429</h2>
 
-<body>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-</body>
-
+      <div>0.041 ETH</div>
+      <div>3 days left</div>
+      <footer>
+        <p>Creation of Jules Wyvern</p>
+      </footer>
+    </main>
+  </body>
 </html>
