--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
 
   <body>
+    <img src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="350px" height="400px">
     <main>
       <h2>Equilibrium #3429</h2>
       <p>Our Equilibrium collection promotes balance and calm.</p>
-      <div>0.041 ETH</div>
+     <p> <div>0.041 ETH</div>
       <div>3 days left</div>
+    </p>
     </main>
 
     <footer>
