Improve page layout and center body content

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   </head>
 
   <body>
-    <img src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="350px" height="400px">
+    <img class="Equilibrium" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="350px" height="400px" />
+    <header><h2>Equilibrium #3429</h2></header>
     <main>
-      <h2>Equilibrium #3429</h2>
       <p>Our Equilibrium collection promotes balance and calm.</p>
-     <p> <div>0.041 ETH</div>
-      <div>3 days left</div>
-    </p>
+      <div>
+        <div>0.041 ETH</div>
+        <div>3 days left</div>
+      </div>
     </main>
 
     <footer>
+      <img src="./images/image-avatar.png" alt="Image-Avatar" width="40px" height="40px" />
       <p>Creation of Jules Wyvern</p>
     </footer>
   </body>
-  
 </html>
