--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <img class="Equilibrium" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="350px" height="400px" />
+    <img class="Equilibrium" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="325px" height="320px" />
     <header><h2>Equilibrium #3429</h2></header>
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
@@ -20,7 +20,7 @@
     </main>
 
     <footer>
-      <img src="./images/image-avatar.png" alt="Image-Avatar" width="40px" height="40px" />
+      <img class="Avatar" src="./images/image-avatar.png" alt="Image-Avatar" width="40px" height="40px" />
       <p>Creation of Jules Wyvern</p>
     </footer>
   </body>
