--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header><h3>Equilibrium #3429</h3></header>
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
-      <div>
+      <div class="info">
         <div>0.041 ETH</div>
         <div>3 days left</div>
       </div>
@@ -21,7 +21,7 @@
 
     <footer>
       <img class="Avatar" src="./images/image-avatar.png" alt="Image-Avatar" width="40px" height="40px" />
-      <p>Creation of Jules Wyvern</p>
+     <div>Creation of Jules Wyvern</div>
     </footer>
   </body>
 </html>
