Add icons and improve layout for info section

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="info">
-        <div>0.041 ETH</div>
-        <div>3 days left</div>
+        <div><img src="./images/icon-ethereum.svg" alt="icon-ethereum">  0.041 ETH</div>
+        <div><img src="./images/icon-clock.svg" alt=""> 3 days left</div>
       </div>
+      <hr>
     </main>
 
     <footer>
