--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="info">
         <div><img src="./images/icon-ethereum.svg" alt="icon-ethereum">  0.041 ETH</div>
-        <div><img src="./images/icon-clock.svg" alt=""> 3 days left</div>
+        <div><img src="./images/icon-clock.svg" alt="icon-clock"> 3 days left</div>
       </div>
       <hr>
     </main>
