Refine info section layout and avatar styling

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="info">
-        <div><img src="./images/icon-ethereum.svg" alt="icon-ethereum">  0.041 ETH</div>
-        <div><img src="./images/icon-clock.svg" alt="icon-clock"> 3 days left</div>
+        <div class="amount"><img src="./images/icon-ethereum.svg" alt="icon-ethereum">  0.041 ETH</div>
+        <div class="time"><img src="./images/icon-clock.svg" alt="icon-clock"> 3 days left</div>
       </div>
       <hr>
     </main>
 
     <footer>
-      <img class="Avatar" src="./images/image-avatar.png" alt="Image-Avatar" width="40px" height="40px" />
+      <img class="Avatar" src="./images/image-avatar.png" alt="Image-Avatar" width="35px" height="35px" />
      <div>Creation of Jules Wyvern</div>
     </footer>
   </body>
