Add color styling to info section elements

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="info">
-        <div class="amount"><img src="./images/icon-ethereum.svg" alt="icon-ethereum">  <span class="no-of-eth">0.041 ETH</span> </div>
-        <div class="time"><img src="./images/icon-clock.svg" alt="icon-clock"><span class="allocated-time"> 3 days left</span></div>
+        <div class="amount"><img src="./images/icon-ethereum.svg" alt="icon-ethereum"> 0.041 ETH</div>
+        <div class="time"><img src="./images/icon-clock.svg" alt="icon-clock"> 3 days left</div>
       </div>
       <hr>
     </main>
