Add color styling to avatar creator text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <footer>
       <img class="Avatar" src="./images/image-avatar.png" alt="Image-Avatar" width="35px" height="35px" />
-     <div>Creation of Jules Wyvern</div>
+     <div><span class="avatar-title"> Creation of</span> Jules Wyvern</div>
     </footer>
   </body>
 </html>
