Update Equilibrium image class name for consistency

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <img class="Equilibrium" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="325px" height="320px" />
+    <img class="Equilibrium-image" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="325px" height="320px" />
     <header><h3>Equilibrium #3429</h3></header>
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
