Implement hover effect and responsive image styling for Equilibrium image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
 
   <body>
+    <div class="image-container">
     <img class="Equilibrium-image" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="325px" height="320px" />
+  </div>
     <header><h3>Equilibrium #3429</h3></header>
     <main>
       <p>Our Equilibrium collection promotes balance and calm.</p>
