Add view icon overlay to Equilibrium image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="image-container">
     <img class="Equilibrium-image" src="./images/image-equilibrium.jpg" alt="Equilibrium-Image" width="325px" height="320px" />
+    <img class="view-icon" src="./images/icon-view.svg" alt="View-Icon">
   </div>
     <header><h3>Equilibrium #3429</h3></header>
     <main>
